Updating API to enable composite requests (meaning multiple label stack responses)
